ui: fix psdoc_reply & overflow (#100)

--- a/packages/ui-default/components/discussion/comments.page.styl
+++ b/packages/ui-default/components/discussion/comments.page.styl
@@ -33,6 +33,11 @@ $downvote-color = red
     >.media
       padding-bottom: 0
 
+.dczcomments__item > .media
+  display: flex
+  >.media__body
+    max-width: calc(100% - 6.5em);
+
 .dczcomments__supplementary
   float: left
   margin-bottom: rem(5px)
